[package]
name = "feanor-mempool"
version = "2.1.0"
edition = "2021"
authors = ["Simon Pohmann <simon@pohmann.de>"]

repository = "https://github.com/FeanorTheElf/feanor-mempool"
homepage = "https://github.com/FeanorTheElf/feanor-mempool"
keywords = ["pool", "memory", "allocation"]
readme = "Readme.md"
description = "A simple interface to memory allocation and pooling, designed for use by feanor-math."
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["rlib"]
bench = true

[features]
disable_print_warnings = []

[dependencies]
thread_local = "1.1.8"

[profile.profiling]
inherits = "bench"
debug = true
panic = "abort"
codegen-unit = 1
